[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'numpyimage'
version = '3.7.0'
description = 'Load, save, & manipulate image files as numpy arrays'
readme.file = 'README.md'
readme.content-type = 'text/markdown'
requires-python = '>=3.6'
license = {file = 'LICENSE'}
keywords = ['images', 'pixel arrays', 'image formats', 'convert', 'graphics', 'draw simple shapes']
authors = [{name = 'Jasper Phelps', email = 'jasper.s.phelps@gmail.com'}]
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Development Status :: 5 - Production/Stable',
    'Topic :: Scientific/Engineering :: Image Processing',
]
urls = {Repository = 'https://github.com/jasper-tms/npimage'}
dependencies = [
    'numpy',
    'tqdm',
    'pillow',
    'pillow-heif',
    'tifffile',
    'pynrrd',
    'matplotlib',
]

[project.optional-dependencies]
vid = [
    'av',
]
align = [
    'opencv-python-headless',
]
all = [
    'av',
    'opencv-python-headless',
]
dev = [
    'av',
    'opencv-python-headless',
    'pytest',
    'pytest-cov',
    'psutil',
]

[tool.pytest.ini_options]
testpaths = ['tests']
markers = [
    'slow: marks tests that shell out to ffmpeg or write real video files (deselect with -m "not slow")',
]

[tool.setuptools.packages.find]
include = ['npimage']
